--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="es" xmlns:th="https://www.thymeleaf.org">
+<head th:replace="~{plantilla/template :: head}">
     <meta charset="UTF-8">
-    <meta name="description" content="Una aplicacion que te permite estudiar tu papel de una obra de teatro.
-    Introduce tu guión o libreto y selecciona tu personaje y podrás aprenderte tu papel.">
-    <meta name="author" content="PAULA DE JUAN SEGURA">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Libreto</title>
-    <link href="../../static/css/style01.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <img src="../../static/images/logo_tu_libreto.jpg" width="200" height="200"/>
-        <h1>Tu libreto</h1>
-        <h2>Aprende el papel de tu personaje</h2>
-    </header>
+    <header th:replace="~{plantilla/template :: header}"></header>
+
+
+    <footer th:replace="~{plantilla/template :: footer}"></footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
