--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,80 @@
 </head>
 <body>
     <header th:replace="~{plantilla/template :: header}"></header>
-
+    <main class="main-content">
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide carousel-modified">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="450" height="450" src="https://tse3.mm.bing.net/th/id/OIG3.8UXr.gom1FrHpTTqJS5j?pid=ImgGn" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#555" dy=".3em"></text></img>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Tu app para memorizar tu libreto o guión</h5>
+                            <p>Introduce el guión y prueba nuestra app para memorizar las frases de tu papel.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="450" height="450" src="https://tse1.mm.bing.net/th/id/OIG1.uJOGaAxZ59XkBrzTxc9l?pid=ImgGn" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"/><text x="50%" y="50%" fill="#444" dy=".3em"></text></img>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Ideal para actores y rodajes</h5>
+                            <p>Aprendéte tu papel</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="450" height="450" src="https://tse4.mm.bing.net/th/id/OIG2.TKOL8QBy0.ZONQbi5Dcu?pid=ImgGn" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"/><text x="50%" y="50%" fill="#333" dy=".3em"></text></img>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="450" height="450" src="https://tse1.mm.bing.net/th/id/OIG2.0ykxP7jdpJFGPjGoMp5O?pid=ImgGn" role="img" aria-label="Placeholder: Four slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"/><text x="50%" y="50%" fill="#333" dy=".3em"></text></img>
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Four slide label</h5>
+                            <p>Some representative placeholder content for the four slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <section class="flexbox-container-modified">
+        <div class="row cards-modified">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card card-width-modified">
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row cards-modified">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                 <div class="card card-width-modified">
+                     <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                     </div>
+                 </div>
+            </div>
+        </div>
+        </section>
+    </main>
 
     <footer th:replace="~{plantilla/template :: footer}"></footer>
 </body>
